force-app/main/default/objects/AIQZilliantConfiguration__c/AIQZilliantConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AIQZilliantConfiguration</label>
</CustomObject>