force-app/main/default/objects/AIQZilliantConfiguration__c/fields/aiq_CpuLimitForRetry__c.field-meta.xml
<CustomField>
    <fullName>aiq_CpuLimitForRetry__c</fullName>
    <defaultValue>7000</defaultValue>
    <label>CpuLimitForRetry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>