force-app/main/default/objects/AIQZilliantConfiguration__c/fields/aiq_EnvironmentId__c.field-meta.xml
<CustomField>
    <fullName>aiq_EnvironmentId__c</fullName>
    <label>EnvironmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>