force-app/main/default/objects/AIQZilliantConfiguration__c/fields/BatchJobSize__c.field-meta.xml
<CustomField>
    <fullName>BatchJobSize__c</fullName>
    <label>Batch Job Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>