force-app/main/default/objects/AIQZilliantConfiguration__c/fields/ComparisonPrecision__c.field-meta.xml
<CustomField>
    <fullName>ComparisonPrecision__c</fullName>
    <description>decimal comparison precision</description>
    <inlineHelpText>decimal comparison precision</inlineHelpText>
    <label>Comparison Precision</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>