force-app/main/default/objects/AIQZilliantConfiguration__c/fields/DelegatedApproverExclusions__c.field-meta.xml
<CustomField>
    <fullName>DelegatedApproverExclusions__c</fullName>
    <description>Line separated list of profiles that should not see Delegate Approval button</description>
    <inlineHelpText>Line separated list of profiles that should not see Delegate Approval button</inlineHelpText>
    <label>DelegatedApproverExclusions</label>
    <type>TextArea</type>
</CustomField>