force-app/main/default/objects/AIQZilliantConfiguration__c/fields/EffectiveDateHorizon__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateHorizon__c</fullName>
    <description>number of the days we look back to find the previous active line</description>
    <inlineHelpText>number of the days we look back to find the previous active line</inlineHelpText>
    <label>Effective Date Horizon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>