force-app/main/default/objects/AIQZilliantConfiguration__c/fields/FESEnabledLineLevel__c.field-meta.xml
<CustomField>
    <fullName>FESEnabledLineLevel__c</fullName>
    <description>line separated list of Line Level Names that FES has to run for</description>
    <inlineHelpText>line separated list of Line Level Names that FES has to run for</inlineHelpText>
    <label>FESEnabledLineLevel</label>
    <type>TextArea</type>
</CustomField>