force-app/main/default/objects/AIQZilliantConfiguration__c/fields/FESRequestSize__c.field-meta.xml
<CustomField>
    <fullName>FESRequestSize__c</fullName>
    <label>FES Request Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>