force-app/main/default/objects/AIQZilliantConfiguration__c/fields/FESThreads__c.field-meta.xml
<CustomField>
    <fullName>FESThreads__c</fullName>
    <description>Number of parallel apex jobs launched</description>
    <inlineHelpText>Number of parallel apex jobs launched</inlineHelpText>
    <label>FES Threads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>