force-app/main/default/objects/AIQZilliantConfiguration__c/fields/GetPriceDataFormula__c.field-meta.xml
<CustomField>
    <fullName>GetPriceDataFormula__c</fullName>
    <label>GetPriceDataFormula</label>
    <length>30</length>
    <type>Text</type>
</CustomField>