force-app/main/default/objects/AIQZilliantConfiguration__c/fields/GetPriceDataFormulaEE__c.field-meta.xml
<CustomField>
    <fullName>GetPriceDataFormulaEE__c</fullName>
    <description>used for Entity Evaluation service</description>
    <inlineHelpText>used for Entity Evaluation service</inlineHelpText>
    <label>GetPriceDataFormulaEE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>