force-app/main/default/objects/AIQZilliantConfiguration__c/fields/GetRecommendationsFormula__c.field-meta.xml
<CustomField>
    <fullName>GetRecommendationsFormula__c</fullName>
    <label>GetRecommendationsFormula</label>
    <length>30</length>
    <type>Text</type>
</CustomField>