force-app/main/default/objects/AIQZilliantConfiguration__c/fields/LineScoreAutoApprovalThreshold__c.field-meta.xml
<CustomField>
    <fullName>LineScoreAutoApprovalThreshold__c</fullName>
    <description>score threshold that has to tolerate automatic approval of a contract line</description>
    <inlineHelpText>score threshold that has to tolerate automatic approval of a contract line</inlineHelpText>
    <label>Line Score Auto Approval Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>