force-app/main/default/objects/AIQZilliantConfiguration__c/fields/LineScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>LineScoreThreshold__c</fullName>
    <description>line score threshold that tolerates price decrease</description>
    <inlineHelpText>line score threshold that tolerates price decrease</inlineHelpText>
    <label>Line Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>