force-app/main/default/objects/AIQZilliantConfiguration__c/fields/LineSourceSyncExclusions__c.field-meta.xml
<CustomField>
    <fullName>LineSourceSyncExclusions__c</fullName>
    <description>Comma separated list of line sources that need to be excluded from Zcloud sync. Only applied when set.</description>
    <inlineHelpText>Comma separated list of line sources that need to be excluded from Zcloud sync. Only applied when set.</inlineHelpText>
    <label>LineSourceSyncExclusions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>