force-app/main/default/objects/AIQZilliantConfiguration__c/fields/ManagersPermissionSet__c.field-meta.xml
<CustomField>
    <fullName>ManagersPermissionSet__c</fullName>
    <label>Managers Permission Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>