force-app/main/default/objects/AIQZilliantConfiguration__c/fields/NotificationGroup__c.field-meta.xml
<CustomField>
    <fullName>NotificationGroup__c</fullName>
    <description>list email addresses separated by new line &quot;\r\n&quot;</description>
    <inlineHelpText>list email addresses separated by new line &quot;\r\n&quot;</inlineHelpText>
    <label>Notification Group</label>
    <type>TextArea</type>
</CustomField>