force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runAccountZcloudSync__c.field-meta.xml
<CustomField>
    <fullName>runAccountZcloudSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runAccountZcloudSync</label>
    <type>Checkbox</type>
</CustomField>