force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runCLIZcloudSync__c.field-meta.xml
<CustomField>
    <fullName>runCLIZcloudSync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>runCLIZcloudSync</label>
    <type>Checkbox</type>
</CustomField>