force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runContractZcloudSync__c.field-meta.xml
<CustomField>
    <fullName>runContractZcloudSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runContractZcloudSync</label>
    <type>Checkbox</type>
</CustomField>