force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runProductZCloudSync__c.field-meta.xml
<CustomField>
    <fullName>runProductZCloudSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runProductZCloudSync</label>
    <type>Checkbox</type>
</CustomField>