force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runUOMZCloudSync__c.field-meta.xml
<CustomField>
    <fullName>runUOMZCloudSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runUOMZCloudSync</label>
    <type>Checkbox</type>
</CustomField>