force-app/main/default/objects/AIQZilliantConfiguration__c/fields/runZCloudSync__c.field-meta.xml
<CustomField>
    <fullName>runZCloudSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>runZCloudSync</label>
    <type>Checkbox</type>
</CustomField>