force-app/main/default/objects/AIQZilliantConfiguration__c/fields/SalesAdminProfiles__c.field-meta.xml
<CustomField>
    <fullName>SalesAdminProfiles__c</fullName>
    <label>SalesAdminProfiles</label>
    <type>TextArea</type>
</CustomField>