force-app/main/default/objects/AIQZilliantConfiguration__c/fields/StartDateHorizon__c.field-meta.xml
<CustomField>
    <fullName>StartDateHorizon__c</fullName>
    <description>the threshold that tolerates start date delay (number of days)</description>
    <inlineHelpText>the threshold that tolerates start date delay (number of days)</inlineHelpText>
    <label>Start Date Horizon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>