force-app/main/default/objects/AIQZilliantConfiguration__c/fields/UserSyncExclusions__c.field-meta.xml
<CustomField>
    <fullName>UserSyncExclusions__c</fullName>
    <description>list of users excluded from Zcloud sync process. Applied when sync flag set to TRUE.</description>
    <inlineHelpText>list of users excluded from Zcloud sync process. Applied when sync flag set to TRUE.</inlineHelpText>
    <label>UserSyncExclusions</label>
    <type>TextArea</type>
</CustomField>