force-app/main/default/objects/AIQZilliantConfiguration__c/fields/ZcloudSyncUserId__c.field-meta.xml
<CustomField>
    <fullName>ZcloudSyncUserId__c</fullName>
    <label>ZcloudSyncUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>